alignment issue fixed for enabled text

--- a/src/app/components/core/north/north-task-modal/north-task-modal.component.css
+++ b/src/app/components/core/north/north-task-modal/north-task-modal.component.css
@@ -96,3 +96,24 @@ a {
 #taskForm {
   margin: 1.5rem 1rem;
 }
+
+.column-container {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+.enable-text {
+  padding-left: 0;
+  padding-right: 0;
+  max-width: 1344px;
+  margin: auto;
+}
+
+.service-info {
+  max-width: 1344px;
+  margin: auto;
+}
+
+.service-info-text {
+  padding-left: 16px;
+}
