--- a/src/app/components/core/notifications/notification-service-modal/notification-service-modal.component.css
+++ b/src/app/components/core/notifications/notification-service-modal/notification-service-modal.component.css
@@ -59,4 +59,7 @@ hr {
   margin: 1.5rem 1rem;
 }
 
+.service-info-text {
+  padding-left: 16px;
+}
 
