--- a/src/app/components/core/south/south-service-modal/south-service-modal.component.css
+++ b/src/app/components/core/south/south-service-modal/south-service-modal.component.css
@@ -94,5 +94,27 @@ a {
 }
 
 .enable-div {
-  margin: 1.5rem 1rem;
+  margin: 1.5rem 0rem;
+  padding-left: 16px;
+}
+
+.column-container {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+.enable-text {
+  padding-left: 0;
+  padding-right: 0;
+  max-width: 1344px;
+  margin: auto;
+}
+
+.service-info {
+  max-width: 1344px;
+  margin: auto;
+}
+
+.service-info-text {
+  padding-left: 16px;
 }
